--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".get" />
-        <activity android:name=".show"></activity>
+        <activity android:name=".show" android:parentActivityName=".get"></activity>
     </application>
 
 </manifest>
